Fix -Wcast-function-type-mismatch in CoreAudioSharedUnit.mm <https://bugs.webkit.org/show_bug.cgi?id=279534> <rdar://135818490>

Reviewed by Jer Noble.

* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.mm:
(WebCore::speechActivityListenerCallback):
- Change to return `int` and always return `0` per header doc for
  AudioObjectPropertyListenerProc.

Canonical link: https://commits.webkit.org/283590@main